--- a/myProjects.html
+++ b/myProjects.html
@@ -10,49 +10,125 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="return-icon">
+ <a href="index.html">   <i class="fa-regular fa-circle-left"></i></a>
+  </div>
    <div class="container">
     <h1 class="sub-title">my works</h1>
     <div class="works-list">
       <div class="work">
         <img src="images/work1.PNG" alt="myWork">
         <div class="layer">
-          <h3>first project</h3>
+          <h3>Coffe-Project</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
-          <a href="#" target="_blank"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+          <a href="https://ahmedbarakat310.github.io/coffe-shop/" target="_blank"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
         </div>
       </div>
       <div class="work">
         <img src="images/work2.PNG" alt="myWork">
         <div class="layer">
-          <h3>first project</h3>
+          <h3>Gym-project</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
-          <a href="#" target="_blank"><i class="fa-solid fa-globe"></i></a>
+          <a href="https://ahmedbarakat310.github.io/gym-project/" target="_blank"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
         </div>
       </div>
       <div class="work">
         <img src="images/work3.PNG" alt="myWork">
         <div class="layer">
-          <h3>first project</h3>
+          <h3>Watches-project</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
-          <a href="#" target="_blank"><i class="fa-solid fa-globe"></i></a>
+          <a href="https://ahmedbarakat310.github.io/watches-project/" target="_blank"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
         </div>
       </div>
       <div class="work">
         <img src="images/work4.PNG" alt="myWork">
         <div class="layer">
-          <h3>first project</h3>
+          <h3>Kasper</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
-          <a href="#" target="_blank"><i class="fa-solid fa-globe"></i></a>
+          <a href="https://ahmedbarakat310.github.io/kasper/" target="_blank"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
         </div>
       </div>
       <div class="work">
         <img src="images/work5.PNG" alt="myWork">
         <div class="layer">
-          <h3>first project</h3>
+          <h3>Agancy</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
-          <a href="#"><i class="fa-solid fa-globe"></i></a>
+          <a href="https://ahmedbarakat310.github.io/agancy/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
         </div>
       </div>
+      <div class="work">
+        <img src="images/work6.PNG" alt="myWork">
+        <div class="layer">
+          <h3>Login-project</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/login-design/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work7.PNG" alt="myWork">
+        <div class="layer">
+          <h3>calculator</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/calculator/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work8.PNG" alt="myWork">
+        <div class="layer">
+          <h3>Gym-system</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/gym-system/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work9.PNG" alt="myWork">
+        <div class="layer">
+          <h3>execl-conventer</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/execl-conventer/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work10.PNG" alt="myWork">
+        <div class="layer">
+          <h3>Dashboard</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/dashboard/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work11.PNG" alt="myWork">
+        <div class="layer">
+          <h3>leon</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/leon/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work12.PNG" alt="myWork">
+        <div class="layer">
+          <h3>Live Editor</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/live-web-code-editor-main/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work13.PNG" alt="myWork">
+        <div class="layer">
+          <h3>My Card</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/my-card/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work14.PNG" alt="myWork">
+        <div class="layer">
+          <h3>Technical-Documentation</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/technical-documentation-main/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+     
     </div>
    </div>
 </body>
