--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="about__container container">
       <div class="row">
         <div class="about-col-1">
-          <img src="images/about2.avif" alt="aboutImg" />
+          <img src="images/ABOUT5.jpg" alt="aboutImg" />
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">about me</h1>
