--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
         <div class="about-col-2">
           <h1 class="sub-title">about me</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit
-            repellat consequatur necessitatibus recusandae, officia
-            blanditiis, distinctio sunt provident dignissimos voluptas maiores
-            enim quis? Veritatis pariatur et numquam cum quam quia.
+          my name is Front-end developer with experience in web development. Skilled in HTML, CSS, JavaScript, and
+various frameworks to create user-friendly and interactive web experiences. Proven ability to
+troubleshoot and create efficient coding solutions. Applying to work as a front-end developer to
+improve user experience and create innovative web designs.
+
           </p>
           <div class="tab-titles">
             <p class="tab-links active-link" onclick="openTab('skills')" id="">
