--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ improve user experience and create innovative web designs.
               education
             </p>
           </div>
-          <div class="tab-contents active-tab" id="skills">
+          <div class="tab-contents tab-content active-tab" id="skills">
             <ul>
               <li class="skills-bar skills-bar1">
                 <div class="p p1"></div>
@@ -86,7 +86,7 @@ improve user experience and create innovative web designs.
               </li>
             </ul>
           </div>
-          <div class="tab-contents" id="experience">
+          <div class="tab-content" id="experience">
             <ul>
               <li>
                 <span>JavaScript Developer at Inter2Grow</span><br />make 4
@@ -101,7 +101,7 @@ improve user experience and create innovative web designs.
               </li>
             </ul>
           </div>
-          <div class="tab-contents" id="education">
+          <div class="tab-content" id="education">
             <ul>
               <li>
                 <span>Computer science</span><br />studing computer science in
