--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
   <!-- ========== Start header ========== -->
+  <div class="whatsIcon">
+<a href="https://wa.me/+0201278389339" target="_blank" class="whatsIcon2"><i class="fa-brands fa-whatsapp fa-beat-fade whatsIcon1"></i></a>
+  </div>
   <div id="header" class="header">
     <div class="header__container container">
       <nav>
