--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ improve user experience and create innovative web designs.
               </li>
               <li class="skills-bar skills-bar5">
                 <div class="p p5"></div>
-                <i class="fa-brands fa-angular fa-fade"></i> Angular<span class="percent percent5">60%</span>
+                <i class="fa-brands fa-react fa-beat-fade"></i> React<span class="percent percent5">60%</span>
               </li>
             </ul>
           </div>
