--- a/myProjects.html
+++ b/myProjects.html
@@ -128,6 +128,54 @@
           <a href="https://ahmedbarakat310.github.io/technical-documentation-main/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
         </div>
       </div>
+      <div class="work">
+        <img src="images/new1.jpg" alt="myWork">
+        <div class="layer">
+          <h3>Technical-Documentation</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/networkProject/home.html"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/new2.jpg" alt="myWork">
+        <div class="layer">
+          <h3>Technical-Documentation</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/quiz-app/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/new3.jpg" alt="myWork">
+        <div class="layer">
+          <h3>Technical-Documentation</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/to-do-list/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/new4.jpg" alt="myWork">
+        <div class="layer">
+          <h3>Technical-Documentation</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/newStopWatch/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/new5.jpg" alt="myWork">
+        <div class="layer">
+          <h3>Technical-Documentation</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/random-password/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/new6.jpg" alt="myWork">
+        <div class="layer">
+          <h3>Technical-Documentation</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nihil temporibus atque aliquid quos velit libero hic modi iste asperiores!</p>
+          <a href="https://ahmedbarakat310.github.io/newCalc/"><i class="fa-solid fa-globe fa-beat-fade"></i></a>
+        </div>
+      </div>
      
     </div>
    </div>
